--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react07-phonebook",
+  "name": "react08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dolphin-vr.github.io/react07-phonebook/",
+  "homepage": "https://dolphin-vr.github.io/react08-phonebook/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
     "@reduxjs/toolkit": "^1.9.6",
@@ -17,8 +17,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0",
